Add gatsby and react to project

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
 
 <head>
-	<title>Bo Carey Portfolio Site</title>
+	<title>Bo Carey</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/my-styles.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
@@ -18,11 +19,14 @@
 	<section id="header">
 		<div class="inner">
 			<span class="icon solid major fa-cloud"></span>
-			<h1>Hi, I'm <strong>Bo Carey</strong>, welcome to my portfolio!</h1>
-			<p>This page is still a work in progress, but feel free to check out<br>
-				what I've been working on lately <strong><a href="https://github.com/bo-carey">on my GitHub</a>!</strong></p>
+			<span class="pre-title">Hi,</span>
+			<h1 class="title">I'm <strong>Bo Carey</strong>.</h1>
+			<h1 class="sub-title">I develop outstanding web components.</h1>
+			<p>I'm a software engineer specializing in building scalable,<br>
+				performant webcomponents and websites with high standards in<br>
+				communication, scalable design and fluidity.</p>
 			<ul class="actions special">
-				<li><a href="#one" class="button scrolly">Discover</a></li>
+				<li><a href="#one" class="button scrolly">Scroll Down Here</a></li>
 			</ul>
 		</div>
 	</section>
